--- a/dsmsim/sim-results.tex
+++ b/dsmsim/sim-results.tex
@@ -29,7 +29,7 @@ Three (admittedly very simple) scenarios were tested; each consisted of a densit
 
 \section{Scenarios}
 
-The underlying density surfaces are shown in Figure \ref{sim-plots}. For each of these scenarios, the population size was fixed (at 500 or 5000 individuals) and individuals were randomly placed in the survey area according to the density surface with group size generates from a Poisson distribution with mean 3. A grid of 14 transect lines (parallel to the $y$ axis) the ``height'' of the survey area were placed at a random starting point on the $x$ axis. Points were then detected based on a half-normal detection function with a scale parameter of 0.7, the truncation distance was set to 1.
+The underlying density surfaces are shown in Figure \ref{sim-plots}. For each of these scenarios, the population size was fixed (at 500 or 5000 individuals) and individuals were randomly placed in the survey area according to the density surface with group size generates from a Poisson distribution with mean 3. A systematic grid of 14 transect lines (parallel to the $y$ axis) the ``height'' of the survey area were placed at a random starting point on the $x$ axis. Points were then detected based on a half-normal detection function with a scale parameter of 0.7, the truncation distance was set to 1.
 
 \begin{figure}[htbp]
 \begin{center}
@@ -39,17 +39,17 @@ The underlying density surfaces are shown in Figure \ref{sim-plots}. For each of
 \end{center}
 \end{figure}
 
-The observations were then allocated to 2 by 2 segments, and a DSM was fitted to the counts. Only a simple bivariate smooth of $x$ and $y$ was fitted to the per-segment counts, a  quasi-Poisson response was used.
+The observations were then allocated to 2 by 2 segments, and a DSM was fitted to the counts. Only a simple bivariate smooth of $x$ and $y$ was fitted to the per-segment counts and a  quasi-Poisson response was used.
 
 Once the model had been fitted, the variance of the predicted abundance was estimated using the four methods listed above. The two moving block bootstraps ran for 200 iterations with a block size of 5.
 
-For each combination of population size and underlying density surface 100 simulations were run. There were no convergence failures.
+For each combination of population size and underlying density surface, 100 simulations were run. There were no convergence failures.
 
 \section{Results}
 
 \subsection{Population size 5000}
 
-When the true population size in the survey area was 5000, the number of detections was around 900, which seems more than adequate. 
+When the true population size in the survey area was 5000, the number of detections was around 900, which seems more than adequate to fit a GAM. 
 
 Figure \ref{res-5000} shows the confidence intervals calculated from each of the four methods for each simulation. The left column gives the simulations in order, the right column groups the same results by method. The larger population simulations show that the GAM and variance propagation methods give significantly smaller confidence intervals. 
 
@@ -107,7 +107,7 @@ For the smaller population size the number of detections was around 90. In this 
 
 \section{Conclusion}
 
-Admittedly the simulation is rather simplistic, there is no attempt to incorporate other simulated environmental covariates and only a bivariate smooth of location was used in modelling. However, this set up has shown that when there is a large number of observations the GAM-based methods perform well with tighter confidence intervals and good coverage. In the situation when there are fewer observations, we see that (as one would expect) confidence intervals expand and appear more ``noisy''. It is the moving block bootstrap with simulated detection function uncertainty that appear to suffer the most, being tighter than the other methods but with more chaotic behaviour.
+Admittedly the simulation is rather simplistic, there is no attempt to incorporate other simulated environmental covariates and only a bivariate smooth of location was used in modelling. However, this set up has shown that when there is a large number of observations the GAM-based methods perform well with tighter confidence intervals and good coverage. In the situation where there were fewer observations, we see that (as one would expect) confidence intervals expand and appear more ``noisy''. It is the moving block bootstrap with simulated detection function uncertainty that appear to suffer the most, being tighter than the other methods but with more chaotic behaviour.
 
 Given the significant difference in time taken to calculate the GAM-based intervals and the bootstraps, it seems highly prudent to use the former especially if it is necessary to obtain uncertainty estimates for a white variety of models in a short period of time.
 
